<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.awadeshkumar.reviewapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        tools:context=".LoginFragment">

        <!--<ImageView-->
            <!--android:id="@+id/login_background"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/top_logo_height"-->
            <!--android:layout_marginTop="@dimen/login_margin_top"-->
            <!--android:src="@drawable/color_logo" />-->
        <!-- Login progress -->


        <TextView
            android:id="@+id/login_loading_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-bold"
            android:gravity="center_horizontal"

            android:textColor="#000"
            android:textSize="15sp" />

        <!--<com.leadsquared.app.views.RoundedImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_above="@+id/login_form"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/user_avatar"
             />-->
        <LinearLayout
            android:id="@+id/login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_form"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_shape"
            android:minHeight="35dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:background="@drawable/oval_shape"
                android:gravity="center"
                android:text="!"
                android:textColor="#BF463C"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_weight="0.8"
                android:background="@drawable/textview_shape"
                android:fontFamily="sans-serif-bold"
                android:textColor="#fff"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="7dp"
                android:layout_weight="0.2"
                android:src="@drawable/ic_tick_login"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">
            <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
            <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
            <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="46dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:backgroundTint="@color/check_box_color"
                    android:fontFamily="sans-serif-normal"
                    android:hint="@string/prompt_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/edit_text_color"
                    android:textColorHint="#000"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/email_text_size" />

            </android.support.design.widget.TextInputLayout>

            <!--<AutoCompleteTextView-->
            <!--android:id="@+id/email"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="46dp"-->
            <!--android:fontFamily="sans-serif-light"-->
            <!--android:hint="@string/prompt_email"-->
            <!--android:imeOptions="actionNext"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:maxLines="1"-->
            <!--android:singleLine="true"-->
            <!--android:textColor="@color/primary_text_default_material_dark"-->
            <!--android:textColorHint="#000"-->
            <!--android:textCursorDrawable="@null" />-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="66dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:backgroundTint="@color/check_box_color"
                        android:fontFamily="sans-serif-normal"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/edit_text_color"
                        android:textColorHint="#000"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/password_text_size" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/show_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="4dp"
                    android:fontFamily="sans-serif-bold"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="SHOW"
                    android:textColor="#309BFD"
                    android:textSize="12sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-normal"
                android:text="@string/forgot_password"
                android:textColor="#000"
                android:textSize="@dimen/forgot_password_size" />

            <LinearLayout
                android:id="@+id/privacy_view"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/password"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/privacy_check"
                    style="@style/CustomCheckBox"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-bold"
                    android:gravity="top"
                    android:lineSpacingExtra="1.5dp"
                    android:textColor="#000"
                    android:textColorLink="@color/blue"
                    android:textSize="@dimen/privacy_text_size" />

            </LinearLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_form"
                android:layout_marginTop="12dp"
                android:background="#309BFD"
                android:fontFamily="sans-sarif-bold"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="22sp" />


        </LinearLayout>


        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_above="@+id/about_leadsquared"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-bold"
            android:textColor="#000"
            android:textSize="@dimen/sign_up_text_size" />

        <TextView
            android:id="@+id/about_leadsquared"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-bold"
            android:text="@string/about"
            android:textColor="#309BFD"
            android:textSize="@dimen/sign_up_text_size" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="false"
            android:visibility="gone" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
